Fix: make Home Page buttons vertically aligned
Updated the component for the lower part of the Home Page and the CSS
styling for the component to make Home Page buttons vertically aligned
in desktop layout:
- Put text and buttons in separate divs in order to make sure buttons
stick to bottom of the student and nonprofits containers.
- Added flex-direction and flex-grow attributes to CSS file and made the
textHolder class always take up the full height of the div minus the
height of the button div to make sure that button does not overlap with
text elements.
- Also cleaned up CSS a little for the mobile view to make margins and
padding easier to see.

--- a/frontend/src/styles/home/HomePageLower.module.css
+++ b/frontend/src/styles/home/HomePageLower.module.css
@@ -16,14 +16,32 @@
   justify-content: center;
   text-align: center;
   flex-direction: column;
+  position: relative;
 }
 
 #nonprofitsContainer {
   flex: 50%;
   justify-content: center;
-  margin-left:  10%;
   text-align: center;
   flex-direction: column;
+  position: relative;
+  margin-left:  10%;
+}
+
+.textHolder {
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  height:calc(100% - 55px);
+}
+
+.buttonHolder {
+  height: 55px;
+  width: 100%;
+  bottom: 0;
+  justify-content: center;
+  display: flex;
+
 }
 
 #parentContainer .height {
@@ -54,7 +72,7 @@
   background-color: #0069ca;
   color: #ffffff;
   border: none;
-  height: 55px;
+  height: 100%;
   width: 180px;
   border-radius: 100px;
   border-width: 0px;
@@ -66,8 +84,6 @@
   line-height: 21px;
   text-align: center;
   letter-spacing: -0.02em;
-
-  bottom: 0;
 }
 
 #parentContainer .bluebtn:hover {
@@ -99,7 +115,7 @@
     justify-content: center;
     width: auto !important;
     text-align: center;
-    padding-bottom: 10%;
+    margin-bottom: 5%;
   }
   
   #nonprofitsContainer {
@@ -108,10 +124,9 @@
     margin: auto;
     width: auto !important;
     text-align: center;
-    padding-bottom: 10%;
   }
 
-  #parentContainer .bluebtn {
+  .buttonHolder {
     margin-top: 5%;
   }
 }
